--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,10 @@
 FROM nginx
 
-RUN mkdir /var/www
+RUN getent group www-data || groupadd -r www-data \
+  && id -u www-data &>/dev/null || useradd -r -g www-data www-data
+
+RUN mkdir -p /var/www \
+  && chown -R www-data:www-data /var/www
 
 VOLUME /etc/nginx
 VOLUME /var/log/nginx
